# redux

./: 1da02f_rdx.cpp  911799_rdx.cpp  CMakeLists.txt  Doxyfile.in
cmake/: FindExternal.cmake  clang.cmake  config.cmake  dependencies.cmake  doxygen.cmake  gcc.cmake  install.cmake  mac.cmake  macros.cmake  msvc.cmake  revision.cmake  unix.cmake  use_boost.cmake  use_eigen.cmake  use_fftw3.cmake  use_fits.cmake  use_gdl.cmake  use_gsl.cmake  use_idl.cmake  use_ncdf.cmake  use_opencv.cmake  use_openmp.cmake  use_openmpi.cmake  use_qt.cmake  use_threads.cmake  use_zlib.cmake  windows.cmake
doc/: cmake_faq.dox  coding_conventions.dox  communication.pic  git.dox  main_page.dox  momfbd.dox  momfbd_cfg.dox  protocol.dox  protocol.mcs  release_notes.dox  test.pic  tools_and_utils.dox
include/redux/: application.hpp  constants.hpp  daemon.hpp  debugjob.hpp  exception.hpp  job.hpp  logger.hpp  logsinks.hpp  revision.hpp  serialization.hpp  translators.hpp  types.hpp  version.hpp  work.hpp  worker.hpp
include/redux/algo/: genetic.hpp  simplex.hpp
include/redux/file/: anacompress.hpp  anadecompress.hpp  anainfo.hpp  dirwatch.hpp  exceptions.hpp  fileana.hpp  filefits.hpp  fileinfo.hpp  fileio.hpp  filemeta.hpp  filemomfbd.hpp
include/redux/gui/: hostitem.hpp  hostmodel.hpp  hosttab.hpp  hosttreeview.hpp  jobitem.hpp  jobmodel.hpp  jobtab.hpp  jobtreeview.hpp  jobwidget.hpp  mastertab.hpp  peeradd.hpp  peeritem.hpp  peermodel.hpp  peertab.hpp  peertreeview.hpp  reduxmw.hpp  reduxwidget.hpp  statusthread.hpp  treeitem.hpp
include/redux/image/: cachedfile.hpp  descatter.hpp  fouriertransform.hpp  grid.hpp  image.hpp  pupil.hpp  statistics.hpp  utils.hpp  zernike.hpp
include/redux/logging/: logcontext.hpp  logentry.hpp  logger.hpp  logitem.hpp  logoutput.hpp  logtofile.hpp  logtonetwork.hpp  logtostream.hpp
include/redux/math/: constants.hpp  differentiate.hpp  functions.hpp  helpers.hpp  interval.hpp  linalg.hpp  svd.hpp
include/redux/momfbd/: cache.hpp  channel.hpp  channelcfg.hpp  config.hpp  data.hpp  (+17 more)
lib/: CMakeLists.txt  application.cpp  daemon.cpp  debugjob.cpp  job.cpp  logger.cpp  logsinks.cpp  version.cpp  work.cpp  worker.cpp
lib/file/: anacompress.cpp  anadecompress.cpp  anainfo.cpp  fileana.cpp  fileio.cpp
lib/gui/: jobtreeview.cpp  jobwidget.cpp  mastertab.cpp  peermodel.cpp  reduxmw.cpp  reduxwidget.cpp  statusthread.cpp
lib/image/: fouriertransform.cpp  statistics.cpp  utils.cpp
lib/math/: differentiate.cpp  functions.cpp
lib/momfbd/: channel.cpp  constraints.cpp  momfbdjob.cpp  object.cpp  patch.cpp
lib/network/: peer.cpp  tcpconnection.cpp  tcpserver.cpp
lib/util/: stringutil.cpp
src/: CMakeLists.txt  revision.cpp.template
src/dlm/: CMakeLists.txt  ana.cpp  ana.hpp  convertlog.cpp  cvutil.cpp  cvutil.hpp  fft.cpp  filetools.cpp  gridmatch.cpp  gridmatch.hpp  idlutil.cpp  idlutil.hpp  imgtools.cpp  imgtools.hpp  libana.dlm.in  libgrid.cpp  libgridmatch.dlm.in  libmomfbd.dlm.in  librdx.dlm.in  libsstdlm.dlm  mathlib.hpp  modes.cpp  momfbd.cpp  momfbd.hpp  rdx.cpp  rdx.hpp  string.cpp
src/gdl/: CMakeLists.txt  ana.cpp  ana.hpp  convertlog.cpp  gdlutil.cpp  gdlutil.hpp  load_rdx_gdl_tpl.pro  rdx.cpp  rdx.hpp  two.cpp
src/lib/: CMakeLists.txt  application.cpp  daemon.cpp  debugjob.cpp  job.cpp  logger.cpp  logsinks.cpp  revision.cpp.template  version.cpp  work.cpp  worker.cpp
src/lib/algo/: genetic.cpp  simplex.cpp
src/lib/file/: anacompress.cpp  anadecompress.cpp  dirwatch.cpp  fileana.cpp  filefits.cpp  fileio.cpp  filemomfbd.cpp
src/lib/gui/: hostitem.cpp  hostmodel.cpp  hosttab.cpp  hosttreeview.cpp  jobitem.cpp  jobmodel.cpp  jobtab.cpp  jobtreeview.cpp  jobwidget.cpp  mastertab.cpp  peeradd.cpp  peeritem.cpp  peertab.cpp  peertreeview.cpp  reduxmw.cpp  reduxwidget.cpp  statusthread.cpp  treeitem.cpp
src/lib/image/: descatter.cpp  fouriertransform.cpp  grid.cpp  pupil.cpp  statistics.cpp  utils.cpp  zernike.cpp
src/lib/logging/: logentry.cpp  logger.cpp  logitem.cpp  logoutput.cpp  logtofile.cpp  logtonetwork.cpp  logtostream.cpp
src/lib/math/: differentiate.cpp  functions.cpp  helpers.cpp  linalg.cpp  svd.cpp
src/lib/momfbd/: cache.cpp  channel.cpp  channelcfg.cpp  config.cpp  constraints.cpp  data.cpp  fft_fftw.cpp  legacy.cpp  modecache.cpp  modes.cpp  momfbdjob.cpp  object.cpp  objectcfg.cpp  patch.cpp  result.cpp  solver.cpp  subimage.cpp  tilts.cpp  util.cpp  wavefront.cpp  workspace.cpp
src/lib/network/: host.cpp  peer.cpp  protocol.cpp  tcpconnection.cpp  tcpserver.cpp
src/lib/util/: arraystats.cpp  astro_comp.cpp  cache.cpp  cacheitem.cpp  compress.cpp  convert.cpp  counter.cpp  datautil.cpp  fileutil.cpp  parport.cpp  progresswatch.cpp  projective.cpp  recursepath.cpp  ricecompress.cpp  semaphore.cpp  solar_system_geo.cpp  stopwatch.cpp  stringutil.cpp  time.cpp  trace.cpp
src/lib/util/gsl/: conjugate_gradient.cpp
src/lib/util/opencv/: ecc.cpp  utils.cpp
src/speckle/: CMakeLists.txt
src/speckle/calib/: CMakeLists.txt  Makefile  defs.hpp  gstf.pro  mpiwrapper.cpp  mpiwrapper.hpp  stf.cpp  stf_newest.cpp  wam.cpp  wam.hpp  zernike.cpp  zernike.hpp
testsuite/: CMakeLists.txt  filetest.cpp  imagetest.cpp  mathtest.cpp  momfbdtest.cpp  test.cpp  testsuite.cpp  utiltest.cpp
testsuite/file/: ana.cpp  file.cpp  fits.cpp
testsuite/image/: fourier.cpp  grid.cpp  image.cpp  util.cpp  zernike.cpp
testsuite/include/: imageutils.hpp  testsuite.cpp  testsuite.hpp
testsuite/math/: differentiate.cpp  helpers.cpp  interval.cpp  linalg.cpp  math.cpp
testsuite/momfbd/: config.cpp  data.cpp  momfbd.cpp
testsuite/testdata/: gradient_16s_4x5.fits  gradient_16s_4x5_le.f0  gradient_32f_4x5.fits  gradient_32f_4x5_le.f0  gradient_32s_40x50.fits  gradient_32s_40x50_be.f0  gradient_32s_40x50_be.fz  gradient_32s_40x50_le.f0  gradient_32s_40x50_le.fz  gradient_32s_4x5.fits  gradient_32s_4x5_le.f0  gradient_32s_4x5_u16.fits  gradient_32s_4x5_u32.fits  gradient_64f_4x5.fits  gradient_64f_4x5_le.f0  gradient_8u_4x5.f0  gradient_8u_4x5.fits  header.fits  info.txt
testsuite/util/: array.cpp  data.cpp  string.cpp  util.cpp
(+39 files in other folders)
